apps/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: n8n
    app.kubernetes.io/part-of: n8n
spec:
  type: ClusterIP
  clusterIP: 10.43.164.166
  selector:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: n8n
    app.kubernetes.io/part-of: n8n
  ports:
    - name: http
      port: 5678
      targetPort: 5678
      protocol: TCP
