apps/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: n8n
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: n8n-n8n-websocket@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - n8n.lan
      secretName: n8n-tls
  rules:
    - host: n8n.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
    - host: n8n.pj-home-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
